--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,11 +8,11 @@
 
     <EditText
         android:id="@+id/studentName_register"
-        android:layout_width="275dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Enter First/Last Name Only:"
+        android:hint="Enter name:"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,6 @@
         android:ems="10"
         android:hint="Enter ID:"
         android:inputType="textPersonName"
-        android:maxLength="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +44,18 @@
         app:layout_constraintVertical_bias="0.061"
         app:srcCompat="@drawable/images" />
 
+<!--    <Button-->
+<!--        android:id="@+id/loginBtn_register"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Login"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.498"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.598"-->
+<!--        tools:text="Login" />-->
 
     <Button
         android:id="@+id/registerBtn_register"
@@ -70,4 +81,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.879" />
 
+    <!--    <TextView-->
+<!--        android:id="@+id/instruction"-->
+<!--        android:layout_width="139dp"-->
+<!--        android:layout_height="26dp"-->
+<!--        android:text="no account click here"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.025"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.696" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
